--- a/src/public.html
+++ b/src/public.html
@@ -72,8 +72,8 @@
 
         <hr>
         <div class="section Liz-padding-vertical-lg">
-            <div class="Liz-container Liz-flex Liz-margin-vertical-lg">
-                <div class="Liz-flex-1">
+            <div class="Liz-container Liz-flex Liz-margin-vertical-lg Liz-flex-justify-center">
+                <div>
                     <pre class="line-height-24">
 支持下沙基础教育事业
 学正小学 卓尚击剑队
@@ -92,7 +92,6 @@
 
                     </pre>
                 </div>
-                <div class="Liz-flex-1"></div>
             </div>
         </div>
 
