--- a/src/development.html
+++ b/src/development.html
@@ -71,8 +71,8 @@
 
     <hr>
     <div class="section Liz-padding-vertical-lg">
-        <div class="Liz-container Liz-flex Liz-margin-vertical-lg">
-            <div style="padding-left: 26%;">
+        <div class="Liz-container Liz-margin-vertical-lg">
+            <div class="text-center">
                 <pre class="line-height-24">
 使命：公司前进的每一步，无论是一大步还是一小步，都要带动行业发展的脚步
 愿景：成为对国家、对社会、有价值、有贡献、负责任的企业
@@ -86,11 +86,11 @@
         <div class="panel-group Liz-margin-bottom-0" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-blue" role="tab" id="headingOne">
-                    <h4 class="panel-title Liz-container  Liz-flex">
-                        <a role="button" class="Liz-flex-1 panel-a left20p Liz-padding-vertical-lg" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <h4 class="panel-title Liz-container row">
+                        <a role="button" class="panel-a col-xs-6 col-xs-offset-3 text-center Liz-padding-vertical-lg" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 <pre  class="Liz-text-white">首席设计师      Chief designer</pre>
                         </a>
-                        <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
+                        <div class="Liz-padding-vertical-lg col-xs-3">
                             <a target="_blank" href="http://www.hotjob.cn/wt/zhuoshang/web/index">
                                 <img src="images/page4/massage1.png" alt="" class="Liz-fr Liz-massage" />
                             </a>
@@ -98,8 +98,8 @@
                   </h4>
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                    <div class="panel-body Liz-border-0 Liz-container">
-                        <pre class="line-height-24 left20p">
+                    <div class="panel-body Liz-border-0 Liz-container text-center">
+                        <pre class="line-height-24">
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
@@ -110,11 +110,11 @@
 
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-default" role="tab" id="headingTwo">
-                    <h4 class="panel-title Liz-container Liz-flex">
-                        <a class="collapsed Liz-flex-1 panel-a left20p Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <h4 class="panel-title Liz-container row">
+                        <a class="collapsed col-xs-6 col-xs-offset-3 text-center panel-a Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 <pre class="Liz-text-black">设计助理      Design assistant</pre>
                         </a>
-                        <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
+                        <div class="Liz-padding-vertical-lg col-xs-3">
                             <a target="_blank" href="http://www.hotjob.cn/wt/zhuoshang/web/index">
                                 <img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage" />
                             </a>
@@ -122,8 +122,8 @@
                       </h4>
                 </div>
                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                    <div class="panel-body Liz-border-0 Liz-container">
-                        <pre class="line-height-24 left20p">
+                    <div class="panel-body Liz-border-0 Liz-container text-center">
+                        <pre class="line-height-24">
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
@@ -134,11 +134,11 @@
 
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-default" role="tab" id="headingThree">
-                    <h4 class="panel-title Liz-container  Liz-flex">
-                    <a class="collapsed Liz-flex-1 panel-a left20p  Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <h4 class="panel-title Liz-container row">
+                    <a class="collapsed panel-a col-xs-6 col-xs-offset-3 text-center Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 <pre class="Liz-text-black">拓展主管      Development director</pre>
                     </a>
-                     <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
+                     <div class="Liz-padding-vertical-lg col-xs-3">
                         <a target="_blank" href="http://www.hotjob.cn/wt/zhuoshang/web/index">
                             <img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage" />
                         </a>
@@ -147,7 +147,7 @@
                 </div>
                 <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                     <div class="panel-body Liz-border-0 Liz-container">
-                        <pre class="line-height-24 left20p">
+                        <pre class="line-height-24 text-center">
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
