--- a/src/news.html
+++ b/src/news.html
@@ -61,10 +61,10 @@
                       <a href="#group" role="tab" data-toggle="pill">集团新闻</a>
                   </li>
                   <li role="presentation">
-                      <a href="" role="tab" data-toggle="pill">公益事业</a>
+                      <a href="#public" role="tab" data-toggle="pill">公益事业</a>
                   </li>
                   <li role="presentation">
-                      <a href="" role="tab" data-toggle="pill">员工关怀</a>
+                      <a href="#yuangong" role="tab" data-toggle="pill">员工关怀</a>
                   </li>
                 </ul>
             </div>
@@ -79,6 +79,291 @@
                     <div class="newList-item clearfix vmove">
                         <div class="imgbox">
                             <img src="./images/page7/new1.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                  </div>
+                  <div role="tabpanel" class="tab-pane fade" id="public">
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new1.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                  </div>
+
+                  <div role="tabpanel" class="tab-pane fade" id="yuangong">
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new1.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.html">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
                         </div>
                         <div class="introbox">
                             <div class="tc4">
